syntax = "proto3";

package pix;

service PixService {
    rpc CreatePixKey (PixKeyRequest) returns (PixKeyResponse);
    rpc UpdatePixKey (PixKeyRequest) returns (PixKeyResponse);
    rpc GetPixKeys (PixKeyListRequest) returns (PixKeyListResponse);
    rpc GetPixKey (PixKeyId) returns (PixKeyShowResponse);
    rpc DeletePixKey (PixKeyId) returns (PixKeyResponse);
}

message PixKeyRequest {
    PixKey pix_key = 1;
    string userId = 2;
    optional string id = 3;
}

message PixKey {
    string type = 1;
    string key = 2;
    string bankISPB = 3;
    optional string belongsTo = 4;
}

message PixKeyResponse {
    string status = 1;
    string message = 2;
}

message PixKeyId {
    string id = 1;
    string userId = 2;
}

message PixKeyListRequest {
    string userId = 1;
}

message PixKeyShowResponse {
    optional string pix_key = 1;
}

message PixKeyListResponse {
    string pix_keys = 1;
}